corrected email address

--- a/Website for Student/index.html
+++ b/Website for Student/index.html
@@ -137,7 +137,7 @@
         <div id="Contact">
             <button onclick="openForm()" class="Pop_Up_Button"> CONTACT </button>
             <div class="form-popup" id="myForm">
-                <form action="https://formspree.io/adifranco@gmail.com" method="POST" class="form-container">
+                <form action="https://formspree.io/adifranco2@gmail.com" method="POST" class="form-container">
                     <h1>Contact</h1>
                         <label for="name"><b>Name</b></label>
                             <input type="text" placeholder="Please enter your name here" name="name" required>
